# hexlet-trials-python

./: pyproject.toml
hexlet_trials/module_01/python_list/: multiply.py
