[tool.poetry]
name = "hexlet-trials"
version = "0.1.0"
description = ""
authors = ["Viktor Sklyuev <sklyevv@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_trials"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
